--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 class="bank-title" >Welcome to Babui Bank</h1>
+    <h1 class="text-center" >Welcome to Babui Bank</h1>
 </body>
 
 </html>
