--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-    <h1 class="text-center" >Welcome to Babui Bank</h1>
+    
+    <div id="login-area">
+        <h1 class="text-center" >Welcome to Babui Bank</h1>
+        <div class="submit-area">
+            <h4 class="text-success" >Login</h4>
+            <input type="text" class="form-control" placeholder="Email">
+            <br>
+            <input type="password" class="form-control" name="" id="" placeholder="Password" >
+            <br>
+            <button type="button" class="btn btn-outline-success">Enter</button>
+        </div>
+    </div>
 </body>
 
 </html>
