--- a/index.html
+++ b/index.html
@@ -12,18 +12,28 @@
 </head>
 
 <body>
-    
+    <!--Login Area------------------------->
     <div id="login-area">
-        <h1 class="text-center" >Welcome to Babui Bank</h1>
+        <h1 class="text-center" >Welcome to Jubu Bank</h1>
         <div class="submit-area">
-            <h4 class="text-success" >Login</h4>
+            <h4 class="text-success" >Login</h4> <br>
             <input type="text" class="form-control" placeholder="Email">
             <br>
             <input type="password" class="form-control" name="" id="" placeholder="Password" >
             <br>
-            <button type="button" class="btn btn-outline-success">Enter</button>
+            <button type="button" id="login" class="btn btn-outline-success">Enter</button>
         </div>
     </div>
+
+    <!--Transaction area------------------------>
+
+    <div id="transaction-area">
+        <h1>Transaction area </h1>
+    </div>
+
+    
+    <script src="js.js">
+    </script>
 </body>
 
 </html>
