--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
     <!--Transaction area------------------------>
 
     <div id="transaction-area">
-        <h1>Transaction area </h1>
+        <div class="row">
+            <div class="col-md-4 deposit">
+                <h5>Deposit</h5>
+                <h2>৳ 00</h2>
+            </div>
+            <div class="col-md-4 withdraw">
+                <h5>Withdraw</h5>
+                <h2>৳ 00</h2>
+            </div>
+            <div class="col-md-4 balance">
+                <h5>Balance</h5>
+                <h2>৳ 2707.89</h2>
+            </div>
+        </div>
     </div>
 
     
