deposit withdraw balance added

--- a/index.html
+++ b/index.html
@@ -29,17 +29,23 @@
 
     <div id="transaction-area">
         <div class="row">
-            <div class="col-md-4 deposit">
+            <div class="col-md-4">
+               <div class="deposit">
                 <h5>Deposit</h5>
                 <h2>৳ 00</h2>
+               </div>
             </div>
-            <div class="col-md-4 withdraw">
-                <h5>Withdraw</h5>
+            <div class="col-md-4">
+                <div class="withdraw">
+                    <h5>Withdraw</h5>
                 <h2>৳ 00</h2>
+                </div>
             </div>
-            <div class="col-md-4 balance">
+            <div class="col-md-4">
+               <div class="balance">
                 <h5>Balance</h5>
                 <h2>৳ 2707.89</h2>
+               </div>
             </div>
         </div>
     </div>
