--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <!--Login Area------------------------->
     <div id="login-area">
-        <h1 class="text-center" >Welcome to Jubu Bank</h1>
+        <h1 class="text-center">Welcome to Jubu Bank</h1>
         <div class="submit-area">
-            <h4 class="text-success" >Login</h4> <br>
+            <h4 class="text-success">Login</h4> <br>
             <input type="text" class="form-control" placeholder="Email">
             <br>
-            <input type="password" class="form-control" name="" id="" placeholder="Password" >
+            <input type="password" class="form-control" name="" id="" placeholder="Password">
             <br>
             <button type="button" id="login" class="btn btn-outline-success">Enter</button>
         </div>
@@ -30,27 +30,45 @@
     <div id="transaction-area">
         <div class="row">
             <div class="col-md-4">
-               <div class="deposit">
-                <h5>Deposit</h5>
-                <h2>৳ 00</h2>
-               </div>
-            </div>
-            <div class="col-md-4">
-                <div class="withdraw">
-                    <h5>Withdraw</h5>
-                <h2>৳ 00</h2>
+                <div class="deposit status">
+                    <h5>Deposit</h5>
+                    <h2>৳ 00</h2>
                 </div>
             </div>
             <div class="col-md-4">
-               <div class="balance">
-                <h5>Balance</h5>
-                <h2>৳ 2707.89</h2>
-               </div>
+                <div class="withdraw status">
+                    <h5>Withdraw</h5>
+                    <h2>৳ 00</h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="balance status">
+                    <h5>Balance</h5>
+                    <h2>৳ 2707.89</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="submit-area">
+                    <h4>Deposit</h4>
+                    <input type="text" class="form-control" placeholder="Ammount of ৳ you wanna deposit">
+                    <br>
+                    <button class="btn btn-success">Deposit</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="submit-area">
+                    <h4>Withdraw</h4>
+                    <input type="text" class="form-control" placeholder="Ammount of ৳ you wanna withdraw">
+                    <br>
+                    <button class="btn btn-success">Withdraw</button>
+                </div>
             </div>
         </div>
     </div>
 
-    
+
     <script src="js.js">
     </script>
 </body>
