--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="col-md-6">
                 <div class="submit-area">
                     <h4>Deposit</h4>
-                    <input type="text" class="form-control" placeholder="Ammount of ৳ you wanna deposit">
+                    <input id="depositAmmount" type="text" class="form-control" placeholder="Ammount of ৳ you wanna deposit">
                     <br>
-                    <button class="btn btn-success">Deposit</button>
+                    <button id="addDeposit" class="btn btn-success">Deposit</button>
                 </div>
             </div>
             <div class="col-md-6">
