--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Babui Bank</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Pioneer Bank</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <!--Login Area------------------------->
     <div id="login-area">
-        <h1 class="text-center">Welcome to Jubu Bank</h1>
+        <h1 class="text-center">Welcome to Pioneer Bank</h1>
         <div class="submit-area">
-            <h4 class="text-success">Login</h4> <br>
+            <h4>Login</h4>
             <input type="text" class="form-control" placeholder="Email">
             <br>
-            <input type="password" class="form-control" name="" id="" placeholder="Password">
+            <input type="password" class="form-control" placeholder="Password">
             <br>
-            <button type="button" id="login" class="btn btn-outline-success">Enter</button>
+            <button id="login" class="btn btn-success">Enter</button>
         </div>
     </div>
-
-    <!--Transaction area------------------------>
-
     <div id="transaction-area">
         <div class="row">
             <div class="col-md-4">
                 <div class="deposit status">
                     <h5>Deposit</h5>
-                    <h2>৳ 00</h2>
+                    <h2>৳ <span id="currentDeposit">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                    <h2>৳ 00</h2>
+                    <h2>৳ <span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="balance status">
                     <h5>Balance</h5>
-                    <h2>৳ 2707.89</h2>
+                    <h2>৳ <span id="currentBalance">2707.89 </span></h2>
                 </div>
             </div>
         </div>
@@ -52,7 +45,7 @@
             <div class="col-md-6">
                 <div class="submit-area">
                     <h4>Deposit</h4>
-                    <input id="depositAmmount" type="text" class="form-control" placeholder="Ammount of ৳ you wanna deposit">
+                    <input id="depositAmount" type="text" class="form-control" placeholder="$ amount you want to deposit">
                     <br>
                     <button id="addDeposit" class="btn btn-success">Deposit</button>
                 </div>
@@ -60,14 +53,13 @@
             <div class="col-md-6">
                 <div class="submit-area">
                     <h4>Withdraw</h4>
-                    <input type="text" class="form-control" placeholder="Ammount of ৳ you wanna withdraw">
+                    <input id="withdrawAmount" type="text" class="form-control" placeholder="$ amount you want to withdraw">
                     <br>
-                    <button class="btn btn-success">Withdraw</button>
+                    <button id="addWithdraw" class="btn btn-success">Withdraw</button>
                 </div>
             </div>
         </div>
     </div>
-
 
     <script src="js.js">
     </script>
